# wxWidget_wxForm_cmake

./: CMakeLists.txt
form_builder_files/: MyGUI.cpp  MyGUI.h  MyGUIform_main.cpp  MyGUIform_main.h  gui.fbp
include/: helloApp.h
src/: helloApp.cpp
